Finalized and Configured Authorization

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
-  }
+  },
+  "TokenKey": "U+K7dV.n=tK)0XHSx4Q#j:TDqDN.c6qF*9Ukk.N,Q]m?tgZuKz1t[p-ppn!uWi5/"
 }
