--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TokenKey": "U+K7dV.n=tK)0XHSx4Q#j:TDqDN.c6qF*9Ukk.N,Q]m?tgZuKz1t[p-ppn!uWi5/"
 }
