Added: FluentValidation EditAll route and logic Changed URL to local network

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,8 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft": "None"
     }
   },
+  "AllowedHosts": "*",
   "TokenKey": "U+K7dV.n=tK)0XHSx4Q#j:TDqDN.c6qF*9Ukk.N,Q]m?tgZuKz1t[p-ppn!uWi5/"
 }
