--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,5 +1,10 @@
 {
   "Logging": {
+    "EventLog": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
     "LogLevel": {
       "Default": "None",
       "Microsoft.AspNetCore": "None",
